<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/login"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/password"
                tools:layout_editor_absoluteX="103dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/password"
                tools:layout_editor_absoluteX="103dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/authorize"
                tools:layout_editor_absoluteX="103dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/password"
                tools:layout_editor_absoluteX="103dp" />


            <Button
                android:id="@+id/authorize"
                android:layout_width="105dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:onClick="login"
                android:text="@string/authorize"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="384dp" />
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>